kube/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --file ../docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --file ../docker-compose.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/ccecommerce022037042-net-172.19.50.0: "true"
        io.kompose.service: app
    spec:
      containers:
        - image: python-docker
          imagePullPolicy: Never
          name: a-really-horrile-site
          ports:
            - containerPort: 5000
          resources: {}
          tty: true
      restartPolicy: Always
status: {}
