kube/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --file ../docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --file ../docker-compose.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/ccecommerce022037042-net-172.19.50.0: "true"
        io.kompose.service: db
    spec:
      containers:
        - image: flask-mysql
          imagePullPolicy: Never
          name: mysql-container
          ports:
            - containerPort: 3306
          resources: {}
      restartPolicy: Always
status: {}
